<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input"
        android:textSize="22sp"
        android:paddingLeft="15sp"
        android:paddingTop="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="15dp">

        <EditText
            android:id="@+id/edit_input"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:textSize="22sp"
            android:inputType="numberDecimal"/>

        <Spinner
            android:id="@+id/input_spinner"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/output"
        android:textSize="22sp"
        android:paddingLeft="15sp"
        android:paddingTop="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15sp"
        android:paddingLeft="15sp">

        <HorizontalScrollView
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4">

            <TextView
                android:id="@+id/output_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:maxLines="1"
                android:scrollHorizontally="true"
                android:textColor="#000000"/>

        </HorizontalScrollView>

        <Spinner
            android:id="@+id/output_spinner"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>
    </LinearLayout>

    <Button
        android:id="@+id/all_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:text="@string/all_button"/>

</LinearLayout>