<resources>
    <string name="app_name">[convert]</string>
    <string name="input">Input:</string>
    <string name="output">Output:</string>
    <string name="all_button">ALL</string>
</resources>
